--- a/src/components/CartSummary/index.css
+++ b/src/components/CartSummary/index.css
@@ -4,6 +4,13 @@
   align-self: flex-end;
 }
 
+.div1 {
+  display: flex;
+  flex-direction: column;
+  background-color: green;
+  padding: 20px;
+}
+
 .order-total-value {
   color: #171f46;
   font-family: 'Roboto';
